# Gear-in-love

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  progress.md  pyproject.toml  机器学习校内赛题.docx
data/: download_report.json
data/hf_snapshot/: DEVKIT_LICENSE.md  README.md  TERMS.md
data/prepared/: split_audit.json  stats.json
data/prepared_v2/: split_audit.json
docs/: baseline.md  competition_brief_zh.md  leaderboard_probe_protocol_zh.md  mechanical_alignment_deep_dive_zh.md
paper/: LogicLSTM_extracted.txt  Rule guided.txt
runs/band_exp031/: summary.json
runs/baseline/: train_summary.json
runs/c1_final/: summary.json
runs/c2_funnel/: summary.json
runs/c3_motor_funnel/: summary.json
runs/c4_stable_funnel/: summary.json
runs/carrier_exp034b/: summary.json
runs/exp029_final/: model.pt  train_summary.json
runs/final/: model.pt  train_summary.json
runs/final2/: model.pt  train_summary.json
scripts/: analyze_mechanical_alignment.py  analyze_predictions.py  build_c1_final.py  build_c2_funnel.py  build_c3_motor_funnel.py  build_c4_stable_funnel.py  download_gearxai_assets.py  eval_mechanical_v2.py  export_band_gate_variants.py  export_gear_carrier_variants.py  export_mechv2_gear_variants.py  export_occlusion_gate_variants.py  export_prefix_gate_variants.py  export_relevance_gate_variants.py  export_temperature_variants.py  export_with_mechanical_prior.py  heldout_gate_transfer.py  inspect_dataset.py  make_mech_probes.py  optimize_submission_graph.py  plot_relevance_examples.py  sweep_model_size.py  train_baseline.py
tests/: test_import.py
(+325 files in other folders)
