[project]
name = "gearxai-workspace"
version = "0.1.0"
description = "Workspace for the GearXAI IJCAI-ECAI 2026 explainable gearbox fault diagnosis challenge."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "captum>=0.8.0",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "gearxai-devkit",
    "h5py>=3.15.1",
    "huggingface-hub>=1.1.5",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4,<2",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch==2.10.0+cu126",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
cache_dir = ".tmp/pytest-cache"
addopts = "--basetemp=.tmp/pytest-tmp"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv.sources]
gearxai-devkit = { path = "external/gearxai-devkit-v1.0.1" }
torch = { path = "D:/AppCache/wheelhouse/torch-2.10.0+cu126-cp312-cp312-win_amd64.whl" }
